@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2960931 by drunken monkey, borisson_: Fixed viewing of multiple content
+  entity items.
 
 Search API 1.8 (2018-04-16):
 ----------------------------
